--- a/.gitignore
+++ b/.gitignore
@@ -148,3 +148,6 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+
+#pytest
+.pytest_cache/
