--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -7,9 +7,31 @@ on:
   workflow_dispatch:
 
 jobs:
-  deploy:
-
+  test:
     runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Run tests
+        run: coverage run --source=django_email_verification -m pytest
+
+      - uses: codecov/codecov-action@v1
+        with:
+          name: codecov-umbrella
+          fail_ci_if_error: true
+          verbose: true
+
+  publish:
+    runs-on: ubuntu-latest
+    needs: [ test ]
 
     steps:
     - uses: actions/checkout@v2
