--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,17 @@
-asgiref==3.3.1
-attrs==20.3.0
-coverage==5.3.1
-Django==3.1.8
+asgiref==3.3.4
+attrs==21.2.0
+build==0.4.0
+coverage==5.5
+Django==3.2.4
 iniconfig==1.1.1
-packaging==20.8
+packaging==20.9
+pep517==0.10.0
+pkg-resources==0.0.0
 pluggy==0.13.1
 py==1.10.0
 pyparsing==2.4.7
-pytest==6.2.1
-pytest-django==4.1.0
-pytz==2020.5
+pytest==6.2.4
+pytest-django==4.4.0
+pytz==2021.1
 sqlparse==0.4.1
 toml==0.10.2
