--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 asgiref==3.7.2
 coverage==7.3.0
 deprecation==2.1.0
-Django==4.2.4
+Django==4.2.5
 iniconfig==2.0.0
 packaging==23.1
 pluggy==1.3.0
@@ -9,3 +9,4 @@ PyJWT==2.8.0
 pytest==7.4.1
 pytest-django==4.5.2
 sqlparse==0.4.4
+validators==0.22.0
